name:                hab
version:             0.0.0.0
author:              sjc
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable hab
  main-is:             Main.hs
  build-depends:       base >= 4.9.0.0,
                       directory >= 1.2.6.2,
                       filepath >= 1.4.1.0,
                       time >=1.6 && <1.7,
                       ansi-terminal >=0.6 && <0.7,
                       MissingH >=1.4 && <1.5,
                       parsec >=3.1 && <3.2,
                       parsec-numbers >= 0.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite tests
  type:                exitcode-stdio-1.0
  main-is:             TestMain.hs
  hs-source-dirs:      test, src
  default-language:    Haskell2010
  build-depends:       HUnit,
                       base >= 4.9.0.0,
                       directory >= 1.2.6.2,
                       filepath >= 1.4.1.0,
                       time >=1.6 && <1.7,
                       ansi-terminal >=0.6 && <0.7,
                       MissingH >=1.4 && <1.5,
                       parsec >=3.1 && <3.2
